@@ -1,14 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST dirty-memoize-0.0.4.gem 10240 RMD160 11a84cc8144545ea2e895ae860f91bff9f4b686c SHA1 6d6c33287c698a7f844ce0ed8b8f081fe0e042a3 SHA256 255dd887af3a2a56df3d6163cce3835079474102d2163039c5de47450466eb20
-EBUILD dirty-memoize-0.0.4.ebuild 600 RMD160 fbe2792cb8608be37457ffcd84d37ff9a38bfdd9 SHA1 18f78e597c1ac0e660ab2af6f658d3ca05263316 SHA256 d43084f28d673226d7b5ff43290696f96ba80711053a5426ce441f2b0085e240
-MISC ChangeLog 281 RMD160 af1b3aee7bb0b13994ce7b124e0eff43b697351b SHA1 546f529fe71aa8cdd10cb9efa69e550ceddf631f SHA256 30461dab324e591bd8a562d9379b07d0e022c28fe1f05a09af8e6498e503b413
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+DIST dirty-memoize-0.0.4.gem 10240 SHA256 255dd887af3a2a56df3d6163cce3835079474102d2163039c5de47450466eb20 SHA512 14c8a34e35425d3fcec50a756ef35e2e51c12cf42a9634bb4af55687cecae69d87a1c6e2979dd91d793568167408b5b9a5d6e068507c48e5336b85a3620143bf WHIRLPOOL 2ab1839abae360b8db6dc4ed3f20e58aafc57dad6e301655723c08421c8c85cff0a79927b8ce7d0a1697ddb988254e6b17e6df4d1ee09b91b96b79e5a5619a3a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk4upjsACgkQiIP6VqMIqNcKaAD/Zwrj9yC7DKnDS+0sHcGsOkQ7
-9nCrTbL8EzwK4iqg0T4BAImgmvqnf5XwHIrmZxwKPPu6nXYfyNe3DeoXO9Y7jU5A
-=kDfl
+iF4EAREIAAYFAlBlZ/UACgkQiIP6VqMIqNcsFAD8DAKwHU+FLOxn/OlMwSQelWeD
+2yQbu1XrKiDED0zxNfcA/08F5bFiKS/wvVe9EqyKlP8CHcMLIHXKYUvtXrvzsNR7
+=BoZD
 -----END PGP SIGNATURE-----
