@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/dirty-memoize
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  28 Sep 2012; Hans de Graaff <graaff@gentoo.org> dirty-memoize-0.0.4.ebuild:
+  Use rspec recipe; add ruby19.
 
 *dirty-memoize-0.0.4 (26 Jul 2011)
 
